syntax = "proto3";

package health;

option go_package = "pkg/proto/health";

// HealthService provides health check functionality
service HealthService {
  // Check performs a health check
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {}
  
  // Watch streams health check status
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse) {}
}

// HealthCheckRequest is the request for health check
message HealthCheckRequest {
  string hostname = 1; // Optional host to check, can be empty
}

// HealthCheckResponse is the response from health check
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
} 